# nox-old

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: auxiliary_vars.cmake  nox-config.cmake.in  nox.pc.in  run_clang_format.cmake  run_clang_tidy.cmake  utilities.cmake
examples/: CMakeLists.txt
examples/base/: CMakeLists.txt
examples/base/include/base/: example.h  image.h  window.h
examples/base/src/: CMakeLists.txt  example.cpp  image.cpp  window.cpp
examples/hello_triangle/: CMakeLists.txt  main.cpp
examples/sandbox/: CMakeLists.txt  main.cpp  sandbox_application.cpp  sandbox_application.h  sandbox_example.cpp  sandbox_example.h
include/nox/: buffer.h  buffer_types.h  command_list.h  command_list_types.h  common.h  config.h  descriptor_set.h  descriptor_set_pool.h  (+31 more)
scripts/: build_nox_visual.bat  check_config.cmd  config.cmd  generate_nox_visual.bat  nox_utility.py
src/: CMakeLists.txt  assertion.h  asserts.cpp  asserts.h  format_descriptor.cpp  format_descriptor.h  format_helper.cpp  format_helper.h  framebuffer_visitor.h  render_pass_visitor.h  renderer.cpp  renderer_factory_registry.cpp  renderer_factory_registry.h  renderer_registry.cpp  renderer_registry.h  shader_visitor.h  texture_visitor.h
src/core/: CMakeLists.txt  assertion.h  config.h  core.h  logger.cpp  logger.h  logger_impl.cpp  logger_impl.h  singleton.h  utilities.h
src/opengl/: CMakeLists.txt  gl_buffer.cpp  gl_buffer.h  gl_command_list.cpp  gl_command_list.h  gl_context.cpp  gl_context.h  gl_descriptor_set.cpp  gl_descriptor_set.h  gl_descriptor_set_pool.cpp  gl_descriptor_set_pool.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_framebuffer_visitor.h  gl_graphics_pipeline_state.cpp  gl_graphics_pipeline_state.h  gl_helper.cpp  gl_helper.h  gl_pipeline_layout.cpp  gl_pipeline_layout.h  gl_plugin.cpp  gl_program.cpp  gl_program.h  gl_render_pass.cpp  gl_render_pass.h  gl_render_pass_visitor.h  gl_render_target.cpp  gl_render_target.h  gl_renderer.cpp  gl_renderer.h  gl_shader.cpp  gl_shader.h  gl_shader_visitor.h  gl_state.h  gl_swapchain.cpp  gl_swapchain.h  gl_texture.cpp  gl_texture.h  gl_texture_visitor.h  gl_vertex_array.cpp  (+2 more)
src/opengl/linux/: CMakeLists.txt  linux_gl_context.cpp  linux_gl_context.h  x11_gl_context.cpp  x11_gl_context.h
src/opengl/windows/: CMakeLists.txt  windows_gl_context.cpp  windows_gl_context.h
src/plugins/: CMakeLists.txt  dynamic_plugin.cpp  dynamic_plugin.h  plugin.cpp  plugin.h  plugin_abi_compatibility_identifier.h  plugin_interface.h  plugin_loader.cpp  plugin_loader.h  plugin_manager.cpp  plugin_manager.h  plugin_procedure_names.h  static_plugin.cpp  static_plugin.h
src/plugins/linux/: CMakeLists.txt  linux_dynamic_plugin.cpp  linux_dynamic_plugin.h  linux_plugin.cpp  linux_plugin.h
src/plugins/windows/: CMakeLists.txt  dynamic_plugin.cpp  windows_dynamic_plugin.cpp  windows_dynamic_plugin.h  windows_plugin.cpp  windows_plugin.h
src/renderer/: CMakeLists.txt  buffer.cpp  command_list.cpp  format_helper.cpp  format_helper.h  pipeline_state.cpp  render_pass.cpp  render_target.cpp  renderer.cpp  renderer_callback_registry.cpp  renderer_callback_registry.h  renderer_factory_registry.cpp  renderer_factory_registry.h  renderer_interface.cpp  renderer_plugin.cpp  renderer_plugin.h  renderer_plugin_import.h  resource.cpp  shader.cpp  swap_chain.cpp  texture.cpp
src/renderer/opengl/: CMakeLists.txt  gl_buffer.cpp  gl_buffer.h  gl_command_list.cpp  gl_command_list.h  gl_context.h  gl_debug_message_callback.inl  gl_graphics_pipeline_state.cpp  gl_graphics_pipeline_state.h  gl_helper.cpp  gl_helper.h  gl_object.h  gl_pipeline_layout.cpp  gl_pipeline_layout.h  gl_pipeline_state.cpp  gl_pipeline_state.h  gl_plugin.cpp  gl_plugin.h  gl_program.cpp  gl_program.h  gl_render_pass.cpp  gl_render_pass.h  gl_render_target.cpp  gl_render_target.h  gl_renderer.cpp  gl_renderer.h  gl_shader.cpp  gl_shader.h  gl_shader_visitor.h  gl_state.h  gl_swap_chain.cpp  gl_swap_chain.h  gl_texture.cpp  gl_texture.h  gl_texture_visitor.h  gl_vertex_array.cpp  gl_vertex_array.h
src/renderer/opengl/linux/: linux_gl_context.cpp
src/renderer/opengl/windows/: CMakeLists.txt  windows_gl_context.cpp
src/renderer/visitors/: CMakeLists.txt  shader_visitor.h  texture_visitor.h
src/utilities/: CMakeLists.txt  assertion.h  config_helper.h  dummy.cpp  logger.cpp  logger.h  singleton.h  string_helper.h  utilities.h
src/utilities/logging/: CMakeLists.txt  log.cpp  log.h  log_categories.cpp  log_categories.h  log_macros.h
src/utilities/windows/: CMakeLists.txt  windows_helper.cpp  windows_helper.h
src/window/: CMakeLists.txt  window.cpp
src/window/linux/: CMakeLists.txt  linux_window.cpp  linux_window.h  linux_window_helper.cpp  linux_window_helper.h
src/window/windows/: CMakeLists.txt  windows_window.cpp  windows_window.h  windows_window_class.cpp  windows_window_class.h  windows_window_helper.cpp  windows_window_helper.h  windows_window_procedure.cpp  windows_window_procedure.h  windows_window_procedure.inl
tests/: CMakeLists.txt  config.h.in  variable_backup.h
tests/base/: CMakeLists.txt  window.cpp  window.h
tests/base/opengl/: CMakeLists.txt  gl_test_environment.cpp  gl_test_environment.h
tests/fixtures/: CMakeLists.txt  assert_disabled_fixture.h  renderer_fixture.cpp  renderer_fixture.h  window_fixture.cpp  window_fixture.h
tests/unit_tests/: CMakeLists.txt  format_descriptor_tests.cpp  plugins_tests.cpp
tests/unit_tests/mocks/: CMakeLists.txt  mock_plugin.cpp  mock_plugin.h
tests/unit_tests/opengl/: CMakeLists.txt  gl_buffer_tests.cpp  gl_context_tests.cpp  gl_program_tests.cpp  gl_shader_tests.cpp  gl_swapchain_tests.cpp
tests/utilities/: CMakeLists.txt  utilities.h  window.cpp  window.h
tools/: auxiliary.py  build_runner.py  clang_format_runner.py  clang_tidy_runner.py  configs.py  tools.py
unit_tests/: CMakeLists.txt  main.cpp  plugins_tests.cpp  renderer_tests.cpp
unit_tests/mocks/: CMakeLists.txt  mock_plugin.cpp  mock_plugin.h
unit_tests/plugins/: CMakeLists.txt  plugins_tests.cpp
(+27 files in other folders)
